--- a/src/Resources/views/pages/chart.html.twig
+++ b/src/Resources/views/pages/chart.html.twig
@@ -1,5 +1,5 @@
 {% extends 'pages/default.html.twig' %}
-{% block body %}
+{% block content %}
     {% include 'actions/logout.html.twig' %}
     <div class="form-container">
         {% include 'forms/upload.html.twig' %}
