--- a/src/Resources/views/pages/index.html.twig
+++ b/src/Resources/views/pages/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'pages/default.html.twig' %}
-{% block body %}
+{% block content %}
     <div class="form-container">
         {% include 'forms/login.html.twig' %}
     </div>
